Adds to errata the fact that we have no fatal errors. Adds option to export a test case as HTML or copy it to the clipboard.

--- a/dox/developer_guide.dox
+++ b/dox/developer_guide.dox
@@ -125,6 +125,10 @@
     <td>USI_*</th>
     <td>Some instructions are limited to hard-coded values because they call the string() version of OperandChecker.isValid*. Replacing the string operand with an integer could fix this.</td>
   </tr>
+  <tr>
+    <td>ErrorHandler</th>
+    <td>Errors are divided into two severities, warning and error. There is no fatal error, which likely violates specification.</td>
+  </tr>
 </table>
   
 */
