--- a/dox/test_case_14.dox
+++ b/dox/test_case_14.dox
@@ -1,6 +1,6 @@
 /*!
 
-\page test_case_14 Invalid/Missing Arithmetic Operand Tests
+\page testcase14 Invalid/Missing Arithmetic Operand Tests
 
 <h1>Input</h1>
 <pre><span style="font-style:italic;color:#800080;">start</span> <span style="font-weight:bold;color:#000080;">kicko</span> <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">000</span><span style="color:#ff0000;">;</span>
