Fixes an issue in evaluate() (exception when passed * as expression). Fixes Ratul's docs.

--- a/dox/developer_guide.dox
+++ b/dox/developer_guide.dox
@@ -31,7 +31,7 @@
   <tr>
     <td>April 6, 2012/10:27PM to on and off all day</td>
     <td>Eric, Josh, Noah</td>
-    <td>IRC conversation.  Developed overall structure of Assembler.  Layed out framework for classes. Began implementing.</td>
+    <td>IRC conversation.  Developed overall structure of Assembler. Laid out framework for classes. Began implementing.</td>
   </tr>
   <tr>
     <td>April 7, 2012/9:40PM to on and off all day</td>
